--- a/app/src/main/res/layout/ordenador_card.xml
+++ b/app/src/main/res/layout/ordenador_card.xml
@@ -10,75 +10,60 @@
     app:cardElevation="15dp"
     app:cardUseCompatPadding="true">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="@+id/txtModeloFila"
-        app:layout_constraintEnd_toStartOf="@+id/txtVelocidadFila"
-        app:layout_constraintStart_toStartOf="@+id/txtVelocidadFila"
-        app:layout_constraintTop_toBottomOf="@+id/txtModeloFila">
+        android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/txtMarcaFila"
-            android:layout_width="0dp"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="32dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginEnd="44dp"
-            android:layout_marginBottom="25dp"
-            android:gravity="center"
-            android:text="TextView"
-            android:textAlignment="center"
-            app:layout_constraintBottom_toTopOf="@+id/txtRamFila"
-            app:layout_constraintEnd_toStartOf="@+id/txtModeloFila"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:layout_weight="1"
+            android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/txtModeloFila"
-            android:layout_width="0dp"
+            <TextView
+                android:id="@+id/txtModeloFila"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:text="TextView"
+                android:textAlignment="center" />
+
+            <TextView
+                android:id="@+id/txtMarcaFila"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:text="TextView"
+                android:textAlignment="center" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:layout_marginEnd="32dp"
-            android:layout_marginBottom="25dp"
-            android:gravity="center"
-            android:text="TextView"
-            android:textAlignment="center"
-            app:layout_constraintBottom_toTopOf="@+id/txtVelocidadFila"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/txtMarcaFila"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:layout_weight="1"
+            android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/txtRamFila"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="32dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginEnd="46dp"
-            android:layout_marginBottom="10dp"
-            android:gravity="center"
-            android:text="TextView"
-            android:textAlignment="center"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/txtVelocidadFila"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/txtMarcaFila" />
+            <TextView
+                android:id="@+id/txtRamFila"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:text="TextView"
+                android:textAlignment="center" />
 
-        <TextView
-            android:id="@+id/txtVelocidadFila"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:layout_marginEnd="32dp"
-            android:layout_marginBottom="10dp"
-            android:gravity="center"
-            android:text="TextView"
-            android:textAlignment="center"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/txtRamFila"
-            app:layout_constraintTop_toBottomOf="@+id/txtModeloFila" />
+            <TextView
+                android:id="@+id/txtVelocidadFila"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:text="TextView"
+                android:textAlignment="center" />
+        </LinearLayout>
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    </LinearLayout>
 </androidx.cardview.widget.CardView>
